<resources>
    <string name="app_name">ChatBy</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="hint_confirm_email">Confirm Email</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="active_counter">Active Counter</string>
    <string name="default_counter">+1</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="created">Created</string>
    <string name="nearby">Nearby</string>
    <string name="title">Title</string>
    <string name="radius">Radius (km)</string>
    <string name="lat">Latitude</string>
    <string name="lng">Longitude</string>
    <string name="pick_date">Pick date</string>
    <string name="pick_end_date">Pick End Date</string>
    <string name="no_date_selected">No date selected</string>
    <string name="calender">Calender</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="new_message_hint">Type your message</string>
    <string name="alarm_clock">alarm clock</string>
    <string name="join_room">Join the conversation</string>
    <string name="action_leave">Leave Room</string>
    <string name="action_logout">Logout</string>
    <string name="action_delete_account">Delete Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="save">Save</string>
    <string name="update_pass">Update Password</string>
    <string name="account_settings">Account Settings</string>
    <string name="remove">Remove</string>
    <string name="action_members">View Members</string>
    <string name="account">Account</string>
    <string name="active">Active</string>
    <string name="favorite">Favorite</string>
    <string name="sort">Sort</string>
    <string name="location">Location</string>
    <string name="popularity">Popularity</string>
    <string name="rooms_in">" rooms in "</string>
    <string name="default_location_text">Nearby Areas</string>
    <string name="edit">Edit</string>
    <string name="hint_username">Username</string>
    <string name="name_email">Full Name</string>
    <string name="change_password">Change Password</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="no_messages_yet">No messages yet</string>
    <string name="start_conversation">Send a message to start the conversation.</string>
    <string name="no_rooms_nearby">No rooms nearby</string>
    <string name="no_nearby_explanation">Rooms within distance will show up here</string>
    <string name="set_anonymous">Show as anonymous</string>
    <string name="refresh">Refresh</string>
</resources>
