<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_members"
        android:orderInCategory="0"
        android:title="@string/action_members"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_star"
        android:orderInCategory="1"
        android:title="@string/add_to_favorites"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="2"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_leave"
        android:orderInCategory="3"
        android:title="@string/action_leave"
        app:showAsAction="never"/>
</menu>