<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/form_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/hint_email"
        android:maxLines="1"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/form_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_email"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_password"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/form_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_password"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_confirm_password"
        android:maxLines="1"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:text="@string/submit" />

    <Button
        android:id="@+id/button_switch_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_up"
        style="?android:attr/borderlessButtonStyle"/>

</RelativeLayout>