<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/create_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:title="Create New Post"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_close_24dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/create_toolbar"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        android:padding="32dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:theme="@style/HintTextAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/title"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:backgroundTint="@color/off_white"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:theme="@style/HintTextAppearance">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/radius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:hint="@string/radius"
                android:textColor="@color/white"
                android:textColorHint="@color/gray"
                android:backgroundTint="@color/off_white"/>

        </android.support.design.widget.TextInputLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp">

            <ImageView
                android:id="@+id/ic_date"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_insert_date_24dp"
                android:tint="@color/white"
                android:contentDescription="@string/calender"/>

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/ic_date"
                android:layout_toStartOf="@+id/pick_date"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:text="@string/no_date_selected"
                android:textSize="14sp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/pick_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/pick_end_date"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="12sp"
                style="?android:attr/borderlessButtonStyle"/>
        </RelativeLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_check_24dp"
        app:rippleColor="@color/red_a100"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:backgroundTint="@color/white"
        app:fabSize="normal"/>
</RelativeLayout>
