<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="152dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:clipChildren="false"
        android:background="@color/off_white"
        android:orientation="vertical"
        tools:context=".ui.main.account.AccountFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_pic"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_account_circle_24dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/email_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/email_edit"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/hint_email"/>

            <TextView
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/email_edit"
                android:layout_marginBottom="16dp"
                android:layout_alignStart="@+id/email_hint"
                android:layout_below="@id/email_hint"
                style="@style/TextAppearance.AppCompat.Body2"
                tools:text="joembruckner@gmail.com"/>

            <Button
                android:id="@+id/email_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="?attr/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/username_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/username_edit"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/hint_username"/>

            <TextView
                android:id="@+id/username_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/username_edit"
                android:layout_marginBottom="16dp"
                android:layout_alignStart="@+id/username_hint"
                android:layout_below="@id/username_hint"
                style="@style/TextAppearance.AppCompat.Body2"
                tools:text="CamperJoe"/>

            <Button
                android:id="@+id/username_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="?attr/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/name_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/name_edit"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                style="@style/TextAppearance.AppCompat.Caption"
                android:text="@string/name_email"/>

            <TextView
                android:id="@+id/name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/name_edit"
                android:layout_marginBottom="16dp"
                android:layout_alignStart="@+id/name_hint"
                android:layout_below="@id/name_hint"
                style="@style/TextAppearance.AppCompat.Body2"
                tools:text="Joe Bruckner"/>

            <Button
                android:id="@+id/name_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textAllCaps="false"
                android:textColor="?attr/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <TextView
                android:id="@+id/set_anonymous_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@color/white"
                android:foreground="?android:selectableItemBackground"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/set_anonymous"/>

            <Switch
                android:id="@+id/toggle_anonymous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                style="@style/Widget.AppCompat.CompoundButton.Switch"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/white"
            android:foreground="?android:selectableItemBackground"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/change_password"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/white"
            android:foreground="?android:selectableItemBackground"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:text="@string/action_logout"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

        <TextView
            android:id="@+id/delete_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="?attr/colorAccent"
            android:foreground="?android:selectableItemBackground"
            style="@style/TextAppearance.AppCompat.Subhead.Inverse"
            android:text="@string/action_delete_account"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_gray"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
